# cardturner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
fixtures/: README.md
fixtures/scenarios/: opening_1nt_balanced_15hcp.json  stayman_response.json  takeout_double.json
prompts/: sayc.md
src/: auction.rs  bid.rs  hand.rs  lib.rs  main.rs  ollama.rs  prompt.rs
tests/: auction_parse.rs  bid_with_mock.rs  hand_parse.rs  prompt_snapshot.rs  scenarios.rs
tests/snapshots/: prompt_snapshot__opening_seat_north.snap  prompt_snapshot__response_to_1nt_south.snap
