[package]
name = "cardturner"
version = "0.1.0"
edition = "2021"
description = "CLI that asks a local Ollama LLM to bid contract bridge hands using SAYC."
license = "MIT"

[lib]
name = "cardturner"
path = "src/lib.rs"

[[bin]]
name = "cardturner"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
insta = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
